--- a/src/index.css
+++ b/src/index.css
@@ -664,16 +664,17 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 20px;
     background-color: #f5f5f5;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     border-radius: 10px;
-    align-items: center;
   }
   .post-container h1{
     color:rgb(9, 133, 106);
+    text-align: center;
   }
   .post-title {
     font-size: 2em;
@@ -692,10 +693,15 @@ header {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+    justify-content: center;
   }
   .post-card img {
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 70%;
     height: auto;
     display: block;
     margin-bottom: 1rem;
